fixed registration spacing

--- a/src/Components/LoginForm/LoginForm.css
+++ b/src/Components/LoginForm/LoginForm.css
@@ -15,7 +15,6 @@ body {
     /* background: white; */
     margin: auto;
     height: 300px;
-    padding-bottom: 110px;
     color: white;
     font-size: 20px;
     margin-top: 100px;
@@ -48,7 +47,7 @@ Label {
   margin: auto;
   color: white;
   text-align: center;
-  padding: 130px;
+  margin-left: 130px;
   margin-top: 20px;
 }
 Input {
